# CSA-AI-Toolkit

./: .gitignore  README.md  RESOURCES.md  setup.sh
.github/workflows/: workflow.yml
csa-ai-toolkit/foundation_model_api_clients/: main.py
csa-ai-toolkit/foundation_model_api_clients/ai_client/: chatgpt.py  chatgpt.py~
csa_ai_toolkit/: __init__.py
csa_ai_toolkit/foundation_model_api_clients/: README.md  __init__.py  foundation_model_api_client.py  foundation_model_client.py  main.py  output-chatgpt.json  output-gemini.json  pyproject.toml  setup.py
csa_ai_toolkit/foundation_model_api_clients/ai_client/: __init__.py  chatgpt.py  claude.py  gemini.py
csa_ai_toolkit/foundation_model_api_clients/docs/: output-formats.md  system-prompts.md
csa_ai_toolkit/foundation_model_api_clients/example-output/: output-chatgpt.json  output-chatgpt2.json  output-claude.json
csa_ai_toolkit/foundation_model_api_clients/src/: foundation_model_api_client.py
csa_ai_toolkit/foundation_model_api_clients/src/ai_client/: chatgpt.py  gemini.py
csa_ai_toolkit/foundation_model_api_clients/tests/: TODO.md
csa_ai_toolkit/language_translation/: main.py
csa_ai_toolkit/prototypes/: chatgpt4-ai-batch-creator.py  customgpt-ai-client-list-projects.py  promptperfect-ai-client-autotune.py
csa_file_utilities/: README.md
csa_file_utilities/csa_file_conversion/: converthtml2markdown.py  convertjson2markdown.py  convertpdf2markdown.py
test/: PERSONA-2024-04-19-000001.txt  QUESTION-2024-04-19-000002.txt  Unused.md
